Added First Structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
+    <form>
+        <label for="user_km">Km da percorrere</label>
+        <input type="text" id="user_km" name="user_km">
+        <label for="user_age">Età</label>
+        <input type="text" id="user_age" name="user_age">
+        <button type="button" id="send_button">Invia</button>
+    </form>
 
+    <span id="ticket_price"></span>
 </body>
 
 </html>
