--- a/index.html
+++ b/index.html
@@ -7,22 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto Treno Form</title>
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="./css/style.css">
+
     <!-- Javascript -->
     <script type="text/javascript" src="./js/main.js" defer></script>
 </head>
 
 <body>
-    <form>
-        <label for="user_km">Km da percorrere</label>
-        <input type="text" id="user_km" name="user_km">
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="ticket_calculator d-flex flex-column align-items-center">
+                        <div class="ticket_calculator_content">
+                            <h2 class="text-uppercase text-center">Calcola il prezzo del biglietto</h2>
 
-        <label for="user_age">Età</label>
-        <input type="text" id="user_age" name="user_age">
+                            <form class="user_input">
+                                <div class="row gx-4">
+                                    <div class="col-4">
+                                        <div class="user_infos d-inline-block text-center">
+                                            <label class="d-block" for="user_fullname">Nome Completo</label>
+                                            <input type="text" id="user_fullname" name="user_fullname">
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="user_infos d-inline-block text-center">
+                                            <label class="d-block" for="user_km">Km da percorrere</label>
+                                            <input type="text" id="user_km" name="user_km">
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="user_infos d-inline-block text-center">
+                                            <label class="d-block" for="user_age">Età</label>
+                                            <input type="text" id="user_age" name="user_age">
+                                        </div>
+                                    </div>
+                                </div>
 
-        <button type="button" id="send_button">Invia</button>
-    </form>
+                                <button class="d-block mx-auto my-3" type="button" id="send_button">Calcola</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <span id="ticket_price"></span>
+        <span id="ticket_price"></span>
+    </main>
+
 </body>
 
 </html>
