--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="ticket_calculator d-flex flex-column align-items-center">
-                        <div class="ticket_calculator_content">
+                    <div class="ticket_calculator d-flex flex-column align-items-center mt-5">
+                        <div class="ticket_calculator_content p-4 rounded-5">
                             <h2 class="text-uppercase text-center">Calcola il prezzo del biglietto</h2>
 
                             <form class="user_input">
