Added Coach and CP Code Generator

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                                         </div>
                                         <div class="col-3">
                                             <h4>Carrozza</h4>
-                                            <span id="train_coach">278428</span>
+                                            <span id="train_coach"></span>
                                         </div>
                                         <div class="col-3">
                                             <h4>Codice CP</h4>
-                                            <span class="cp_code">278428</span>
+                                            <span id="cp_code">278428</span>
                                         </div>
                                         <div class="col-3">
                                             <h4>Costo biglietto</h4>
