Added Error Message

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
                                 <button class="d-block mx-auto my-3 btn btn-light" type="button"
                                     id="send_button">Calcola</button>
                             </form>
+
+                            <span id="error_text"></span>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 mt-5">
-                    <div class="ticket_results d-flex justify-content-center text-black">
+                <div id="ticket_results" class="col-12 mt-5" style="display: none">
+                    <div class="d-flex justify-content-center text-black">
                         <div class="ticket_results_content w-100 rounded-4 p-4">
                             <div class="row">
                                 <div class="col-4 border-end border-dark">
